# pehchan-mvp

./: compose.yml
PehchanPortal/: Dockerfile  Pasted-Here-s-a-set-of-detailed-instructions-you-can-pass-on-to-your-developers-to-build-the-Pehchan-Port-1726671759041.txt  compose.yml  database.py  main.py  pehchan.db  pyproject.toml
PehchanPortal/static/css/: styles.css
PehchanPortal/static/js/: login.js  register.js
PehchanPortal/templates/: base.html  dashboard.html  login.html  register.html
demo-government-portal/: Dockerfile  app.js  package-lock.json  package.json
demo-government-portal/public/: styles.css
demo-government-portal/views/: callback.ejs  home.ejs
keycloak/: compose.yml
keycloak/pehchan-theme/pehchan/login/: login.ftl  theme.properties
keycloak/pehchan-theme/pehchan/login/styles/: custom.css
verisys/: Dockerfile  app.py  compose.yml  pyproject.toml
