# pyproject.toml
[tool.poetry]
name = "flask-microservice"
version = "0.1.0"
description = "A simple Flask microservice to replicate verisys API"
authors = ["Ali Raza <ali@codeforpakistan.org>"]


[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"